--- a/resources/assets/sass/dev/variables.scss
+++ b/resources/assets/sass/dev/variables.scss
@@ -1,5 +1,12 @@
 // Create new variables, or override Bootstrap variables here
 
-
-
+// Color Variables
+// - Backgrounds
+$admin-background-bg: #000;
 $container-bg: #fff;
+
+// - Borders
+$border-color: $gray-lighter;
+
+// Fonts
+$font-family-sans-serif:  'Lato', Arial, sans-serif;
