--- a/resources/assets/sass/admin/_admin.scss
+++ b/resources/assets/sass/admin/_admin.scss
@@ -43,6 +43,8 @@
     }
 
     .form-description {
+        @include padding-top-medium;
+        @include padding-bottom-medium;
         @include padding-left-medium;
     }
 
