--- a/resources/assets/sass/public/_public.scss
+++ b/resources/assets/sass/public/_public.scss
@@ -1,5 +1,11 @@
 .public-body {
+    background-color: #f2f2f2;
+    height: 100%;
+}
+
+.form-content {
     background-color: #fff;
+    margin-top: 20px;
 }
 
 // Buttons
