--- a/resources/assets/sass/admin/_admin.scss
+++ b/resources/assets/sass/admin/_admin.scss
@@ -8,7 +8,6 @@
 
 .admin-container {
     background-color: $container-bg;
-    @include border-radius(5px);
     padding-bottom: 20px;
 
 }
@@ -17,46 +16,13 @@
     padding-top: 20px;
 }
 
+nav.navbar {
+    margin-bottom: 0;
+}
+
 // Admin Views
 
-.form-index {
-    .single-form-entry {
-        @include border-radius(5px);
-        border: 3px solid $border-color;
 
-        @include light-box-shadow;
-        margin-bottom: 10px;
-    }   
-    .form-title {
-        width: 100%;
-        background-color: $gray-lighter;
-
-    }
-    .form-title h2 {
-        margin-top: 0;
-        margin-left: 0;
-        padding-top: 0;
-        border-bottom: 2px solid $gray-light;
-        @include padding-left-medium;
-        @include padding-top-light;
-        @include padding-bottom-light;
-    }
-
-    .form-description {
-        @include padding-top-medium;
-        @include padding-bottom-medium;
-        @include padding-left-medium;
-    }
-
-    .form-actions {
-        @include padding-left-medium;
-        list-style-type: none;
-    }
-    .form-actions li.form-action {
-        display: inline;
-        margin-right: 10px;
-    }
-}
 
 // Buttons
 
